fix: make scroll icon visible again

--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -97,12 +97,12 @@
 }
 
 .scrollIconContainer {
-  animation: text-appearence 1s ease-out 2s both;
+  animation: scroll-appearence 1s ease-out 2s both;
 
   position: absolute;
   bottom: 4%;
   left: 50%;
-  z-index: 2;
+  z-index: 3;
 
   @media (max-width: $mobile-breakpoint) {
     display: none;
@@ -139,5 +139,16 @@
   100% {
     opacity: 1;
     transform: translate(0, 0);
+  }
+}
+
+@keyframes scroll-appearence {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, 100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, 0);
   }
 }
